--- a/GAMESS/SConstruct
+++ b/GAMESS/SConstruct
@@ -52,7 +52,15 @@ env.Append(BUILDERS = {'BabelGam_m1' : babelgam_m1})
 env.Append(BUILDERS = {'BabelGam_p1' : babelgam_p1})
 env.Append(BUILDERS = {'Gamess' : gamess})
 
-# files
+# If in dist mode, copy all mol files to this folder and build all
+dist = ARGUMENTS.get('dist', 0)
+if dist == 'true':
+	#molsrc = Glob('../mol/tmp/*.mol')
+	molsrc = Glob('../mol/std/*.mol')
+	molsrc+= Glob('../mol/big/*.mol')
+	molsrc+= Glob('../mol/ions/*.mol')
+	env.Execute(Install('.', molsrc))
+
 molfiles = Glob('*.mol')
 files = []
 files_p1 = []
@@ -83,4 +91,10 @@ env.Alias('gamess', gamessBuild)
 
 basedir = os.path.basename(os.path.abspath('.'))
 
-env.Default(gamessBuild)
+if dist == 'true':
+	# Zip all .gout by default if in 'dist' mode
+	zipAction = env.Zip('../HF_TZVP.zip', gamessBuild)
+	env.Default(zipAction)
+else:
+	env.Default(gamessBuild)
+
