--- a/GAMESS/SConstruct
+++ b/GAMESS/SConstruct
@@ -4,6 +4,7 @@
 
 import psutil
 import time
+import sys
 import os
 import shutil
 import re
@@ -24,7 +25,8 @@ def checkIfGamessRunning(processName):
     return False;
 
 if checkIfGamessRunning('gamess.00.x'):
-    print('Gamess is running')
+    print('GAMESS is already running on this machine, exiting...')
+    sys.exit()
 else:
     env = Environment()
 
@@ -43,7 +45,12 @@ else:
 
     file = open(keys_0,'w')
     file.write(fileContents)
+    # Comment out this line for linear molecules, build them manually and then revert it
     file.write('\n! Internal Coordinates\n $CONTRL nzvar=1 $END\n $zmat dlc=.t. auto=.t. $END')
+    
+    # Modify key options here so there is no rebuild for already computed molecules
+    file.write('\n $SYSTEM MWORDS=500 $END')
+
     file.close()
 
     file = open(keys_p1,'w')
@@ -85,6 +92,12 @@ else:
     		cavity = re.search('DEFINITION\ OF\ CAVITY(.*?)PROPERTIES', content, flags=re.S).group(1)
     		geometry_coordinates = re.search('\s\s\s\s\s\*\*\*\*\*\s(.*?)INTERNUCLEAR', content, flags=re.S).group(1)
 		sigma_profile = re.search('GAMESS\/(.*?)gracefully', content, flags=re.S).group(0)
+
+		final_file = gamess_version + inputs_cards + cavity + "\n       ***** " + geometry_coordinates + sigma_profile
+		#creates a new file .gout
+	        f = open(target[0].rstr(), "w")
+        	f.write(final_file)
+	        f.close()
 	except AttributeError:
 		gamess_version = ''
 		inputs_cards = ''
@@ -92,12 +105,6 @@ else:
 		geometry_coordinates = ''
 		sigma_profile = ''
 	    
-	final_file = gamess_version + inputs_cards + cavity + "\n	***** " + geometry_coordinates + sigma_profile
-		    
-	#creates a new file .gout
-	f = open(target[0].rstr(), "w")
-	f.write(final_file)
-	f.close()
 
     bld = Builder(action = build_function, suffix = '.gout', src_suffix = '.gamout',
 	single_source=True)
@@ -134,6 +141,7 @@ else:
     inps = env.BabelGam(files)
     inps += env.BabelGam_p1(files_p1)
     inps += env.BabelGam_m1(files_m1)
+    
     env.Depends(inps, ['keys.gamess'])
     # env.Depends(inps, delAction)
     # process files with gamess
