--- a/GAMESS/SConstruct
+++ b/GAMESS/SConstruct
@@ -129,12 +129,17 @@ files = []
 files_p1 = []
 files_m1 = []
 for fi in molfiles :
-	if str(fi).endswith("+1.mol") :
-		files_p1.append(fi)
-	elif str(fi).endswith("-1.mol") :
-		files_m1.append(fi)
-	else :
-		files.append(fi)
+    goutfile = os.path.splitext(fi.rstr())[0] + '.gout'
+    print(goutfile)
+    if os.path.exists(goutfile) :
+        print('skipping ' + goutfile)
+        continue
+    if str(fi).endswith("+1.mol") :
+        files_p1.append(fi)
+    elif str(fi).endswith("-1.mol") :
+        files_m1.append(fi)
+    else :
+        files.append(fi)
 
 # Build all files for Gamess
 # Delete all DAT files, otherwise gamess will stop
