--- a/GAMESS/SConstruct
+++ b/GAMESS/SConstruct
@@ -11,22 +11,22 @@ import re
 
 
 def checkIfGamessRunning(processName):
-    '''
-    Check if there is any running process that contains the given name processName.
-    '''
-    #Iterate over the all the running process
-    for proc in psutil.process_iter():
-        try:
-            # Check if process name contains the given name string.
-            if processName.lower() in proc.name().lower():
-                return True
-        except (psutil.NoSuchProcess, psutil.AccessDenied, psutil.ZombieProcess):
-            pass
-    return False;
+	'''
+	Check if there is any running process that contains the given name processName.
+	'''
+	#Iterate over the all the running process
+	for proc in psutil.process_iter():
+		try:
+			# Check if process name contains the given name string.
+			if processName.lower() in proc.name().lower():
+				return True
+		except (psutil.NoSuchProcess, psutil.AccessDenied, psutil.ZombieProcess):
+			pass
+	return False;
 
 if checkIfGamessRunning('gamess.00.x'):
-    print('GAMESS is already running on this machine, exiting...')
-    sys.exit()
+	print('GAMESS is already running on this machine, exiting...')
+	sys.exit()
 
 env = Environment()
 
@@ -35,6 +35,7 @@ env['ENV']['HOME'] = os.environ['HOME']
 
 # GAMESS keys file stuff
 keys = 'keys.gamess'
+keys_linear = 'keys_linear.gamess'
 keys_0 = 'keys_0.gamess'
 keys_p1 = 'keys_p1.gamess'
 keys_m1 = 'keys_m1.gamess'
@@ -45,9 +46,7 @@ file.close()
 
 file = open(keys_0,'w')
 file.write(fileContents)
-# Comment out this line for linear molecules, build them manually and then revert it
-file.write('\n! Internal Coordinates\n $CONTRL nzvar=1 $END\n $zmat dlc=.t. auto=.t. $END')
-    
+	
 # Modify key options here so there is no rebuild for already computed molecules
 file.write('\n $SYSTEM MWORDS=500 $END')
 
@@ -63,59 +62,63 @@ file.close()
 
 # Gamess stuff
 babelgam = Builder(action = 'obabel -i mol $SOURCE -o gamin -xf ' + keys_0 + ' -O $TARGET',
-    	             suffix = '.inp', single_source=True)
+					 suffix = '.inp', single_source=True)
+babelgam_linear = Builder(action = 'obabel -i mol $SOURCE -o gamin -xf ' + keys_linear + ' -O $TARGET',
+					suffix = '.inp', single_source=True)
 babelgam_p1 = Builder(action = 'obabel -i mol $SOURCE -o gamin -xf ' + keys_p1 + ' -O $TARGET',
-	             suffix = '.inp', single_source=True)
+				suffix = '.inp', single_source=True)
 babelgam_m1 = Builder(action = 'obabel -i mol $SOURCE -o gamin -xf ' + keys_m1 + ' -O $TARGET',
-	             suffix = '.inp', single_source=True)
+				suffix = '.inp', single_source=True)
 
 # Gamess also produces a .dat file
 def gamess_targets(target, source, env):
-    	   target.append('$HOME/src/gamess/$TARGET.dat')
-    	   return target, source
+		   target.append('$HOME/src/gamess/$TARGET.dat')
+		   return target, source
 gamess = Builder(action = os.environ['HOME'] + '/src/gamess/rungms $SOURCE > $TARGET', suffix = '.gamout',
-    	single_source=True) # , emitter = gamess_targets)
+		single_source=True) # , emitter = gamess_targets)
 
 env.Append(BUILDERS = {'BabelGam' : babelgam})
+env.Append(BUILDERS = {'BabelGamLinear' : babelgam_linear})
 env.Append(BUILDERS = {'BabelGam_m1' : babelgam_m1})
 env.Append(BUILDERS = {'BabelGam_p1' : babelgam_p1})
 env.Append(BUILDERS = {'Gamess' : gamess})
 
 def build_function(target, source, env):
-    f = open(source[0].rstr(), "r")
-    content = f.read()
-    f.close()
-    	
-    f = open(target[0].rstr(), "w")
-    #filter only the relevant information
-    try:    
-    		gamess_version = re.search('directory...(.*?)SINCE', content, flags=re.S).group(1)
-    		inputs_cards = re.search('EXECUTION\ OF\ GAMESS(.*?)MEMORY\ AVAILABLE\s', content, flags=re.S).group(0)
-    		geometry_input = re.search('RUN\ TITLE(.*?)ATOMIC\ BASIS\ SET', content, flags=re.S).group(1)
-    		cavity = re.search('DEFINITION\ OF\ CAVITY(.*?)PROPERTIES', content, flags=re.S).group(1)
-    		try:
-	    		geometry_coordinates = re.search('\s\s\s\s\s\*\*\*\*\*\s(.*?)INTERNUCLEAR', content, flags=re.S).group(1)
-	    	except AttributeError:
-	    		geometry_coordinates = ''
-	    	sigma_profile = re.search('COSab(.*?)gracefully', content, flags=re.S).group(0)
-	    
-		print(len(gamess_version))	
+	f = open(source[0].rstr(), "r")
+	content = f.read()
+	f.close()
+		
+	f = open(target[0].rstr(), "w")
+	#filter only the relevant information
+	try:    
+		gamess_version = re.search('directory...(.*?)SINCE', content, flags=re.S).group(1)
+		inputs_cards = re.search('EXECUTION\ OF\ GAMESS(.*?)MEMORY\ AVAILABLE\s', content, flags=re.S).group(0)
+		geometry_input = re.search('RUN\ TITLE(.*?)ATOMIC\ BASIS\ SET', content, flags=re.S).group(1)
+		cavity = re.search('DEFINITION\ OF\ CAVITY(.*?)PROPERTIES', content, flags=re.S).group(1)
+		try:
+			geometry_coordinates = re.search('\s\s\s\s\s\*\*\*\*\*\s(.*?)INTERNUCLEAR', content, flags=re.S).group(1)
+		except AttributeError:
+			geometry_coordinates = ''
+		sigma_profile = re.search('COSab(.*?)gracefully', content, flags=re.S).group(0)
+
+		print(len(gamess_version))
 		print(len(inputs_cards))	
 		print(len(geometry_input))	
 		print(len(cavity))	
 		print(len(geometry_coordinates))	
 		print(len(sigma_profile))	
-	    	final_file = gamess_version + inputs_cards + geometry_input + cavity + "\n       ***** " + geometry_coordinates + sigma_profile
-	    	#creates a new file .gout
-	    	f.write(final_file)
+		
+		final_file = gamess_version + inputs_cards + geometry_input + cavity + "\n       ***** " + geometry_coordinates + sigma_profile
+		# creates a new file .gout
+		f.write(final_file)
 
-    except AttributeError:
-        gamess_version = ''
-        inputs_cards = ''
-        cavity = ''
-        sigma_profile = ''
+	except AttributeError:
+		gamess_version = ''
+		inputs_cards = ''
+		cavity = ''
+		sigma_profile = ''
 
-    f.close()    
+	f.close()    
 
 bld = Builder(action = build_function, suffix = '.gout', src_suffix = '.gamout',
 single_source=True)
@@ -130,34 +133,43 @@ if dist == 'true':
 	molsrc+= Glob('../mol/ions/*.mol')
 	env.Execute(Install('.', molsrc))
 
-molfiles = Glob('*.mol')
+	# Linear molecules we use the moll extension, since it requires a different builder
+	mollinear = Glob('../mol/linear/*.mol')
+	for fi in mollinear:
+		Command(os.path.split(fi.rstr())[1] + "l", [], Copy("$TARGET", fi))
+
+
+molfiles = Glob('*.mol*')
 files = []
+files_linear = []
 files_p1 = []
 files_m1 = []
 for fi in molfiles :
-    goutfile = os.path.splitext(fi.rstr())[0] + '.gout'
-    print(goutfile)
-    if os.path.exists(goutfile) :
-        print('skipping ' + goutfile)
-        continue
-    if str(fi).endswith("+1.mol") :
-        files_p1.append(fi)
-    elif str(fi).endswith("-1.mol") :
-        files_m1.append(fi)
-    else :
-        files.append(fi)
+	goutfile = os.path.splitext(fi.rstr())[0] + '.gout'
+	print(goutfile)
+	if os.path.exists(goutfile) :
+		print('skipping ' + goutfile)
+		continue
+	if str(fi).endswith("+1.mol") :
+		files_p1.append(fi)
+	elif str(fi).endswith("-1.mol") :
+		files_m1.append(fi)
+	elif str(fi).endswith(".moll") :
+		files_linear.append(fi)
+	else :
+		files.append(fi)
 
 # Build all files for Gamess
 # Delete all DAT files, otherwise gamess will stop
-# delAction = Delete(Glob(os.environ['HOME'] + '/src/gamess/tmp/*.dat'))
-delAction = Delete(Glob(os.environ['HOME'] + '/src/gamess/scr/*.dat'))
+delAction = Delete(Glob(os.environ['HOME'] + '/src/gamess/scr/*.dat') + Glob('/tmp/*.dat'))
 Execute(delAction)
 
 # Convert mol files to gamess input
 inps = env.BabelGam(files)
+inps += env.BabelGamLinear(files_linear)
 inps += env.BabelGam_p1(files_p1)
 inps += env.BabelGam_m1(files_m1)
-    
+	
 env.Depends(inps, ['keys.gamess'])
 # env.Depends(inps, delAction)
 # process files with gamess
