Improved keys file management.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,24 @@
 /bin/
 /*.zip
+*.arc
+*.cos
+*.out
+*.gout
+*.gamout
+*.mop
+*.mol
+*.moll
+*.molb
+/GAMESS-*
+/MOPAC-*
+/GAMESS/*.mol
+/MOPAC/*.mol
+/test/*
+*.nwout
+*.nwt
+*.nw
+*.db
+*.p
+/NWChem*
+/pm6*
+/svp*
