--- a/cosmo/bp86-d2tzvp/SConstruct
+++ b/cosmo/bp86-d2tzvp/SConstruct
@@ -26,7 +26,7 @@ def checkIfGamessRunning(processName):
 
 if checkIfGamessRunning('gamess.00.x'):
 	print('GAMESS is already running on this machine, exiting...')
-	# sys.exit()
+	sys.exit()
 
 env = Environment()
 
