--- a/geometry/bp86-d2svp/SConstruct
+++ b/geometry/bp86-d2svp/SConstruct
@@ -69,7 +69,7 @@ file.write(baseContents + optimizeKeys + '\n $CONTRL ICHARG=-1 $END')
 file.close()
 
 # Gamess stuff
-babelGasMolToInp = Builder(action = 'obabel -i mol $SOURCE -o gamin -xf ' + keys_gas + ' -O $TARGET; [ ! -f ${SOURCE}.keys ] || cat ${SOURCE}.keys >> $TARGET', suffix = '.inp', single_source=True)
+babelGasMolToInp = Builder(action = 'obabel -i mol $SOURCE -o gamin -xf ' + keys_gas + ' -O $TARGET; [ ! -f ${SOURCE}\b\b\bkeys ] || cat ${SOURCE}\b\b\bkeys >> $TARGET', suffix = '.inp', single_source=True)
 babelGasMolToInp_linear = Builder(action = 'obabel -i mol $SOURCE -o gamin -xf ' + keys_gas_linear + ' -O $TARGET', suffix = '.inp', single_source=True)
 babelGasMolToInp_p1 = Builder(action = 'obabel -i mol $SOURCE -o gamin -xf ' + keys_gas_p1 + ' -O $TARGET', suffix = '.inp', single_source=True)
 babelGasMolToInp_m1 = Builder(action = 'obabel -i mol $SOURCE -o gamin -xf ' + keys_gas_m1 + ' -O $TARGET', suffix = '.inp', single_source=True)
@@ -112,7 +112,7 @@ files_linear = []
 files_p1 = []
 files_m1 = []
 for fi in molfiles :
-	outfile = os.path.splitext(fi.rstr())[0] + '.gamout'
+	outfile = os.path.splitext(fi.rstr())[0] + '.xyz'
 	if os.path.exists(outfile) :
 		print('skipping ' + outfile)
 		continue
