--- a/geometry/b3lyp-d2svpd/SConstruct
+++ b/geometry/b3lyp-d2svpd/SConstruct
@@ -39,6 +39,7 @@ keys_gas = 'keys_gas.gamess'
 keys_gas_linear = 'keys_gas_linear.gamess'
 keys_gas_p1 = 'keys_gas_p1.gamess'
 keys_gas_m1 = 'keys_gas_m1.gamess'
+keys_gas_m2 = 'keys_gas_m2.gamess'
 # creating the charge files
 file = open(keys_base,'r')
 baseContents = file.read()
@@ -67,12 +68,16 @@ file.close()
 file = open(keys_gas_m1,'w')
 file.write(baseContents + optimizeKeys + '\n $CONTRL ICHARG=-1 $END')
 file.close()
+file = open(keys_gas_m2,'w')
+file.write(baseContents + optimizeKeys + '\n $CONTRL ICHARG=-2 $END')
+file.close()
 
 # Gamess stuff
 babelGasMolToInp = Builder(action = 'obabel -i mol \'$SOURCE\' -o gamin -xf ' + keys_gas + ' -O \'$TARGET\'; [ ! -f \'${SOURCE.base}.keys\' ] || cat \'${SOURCE.base}.keys\' >> \'$TARGET\'', suffix = '.inp', single_source=True)
 babelGasMolToInp_linear = Builder(action = 'obabel -i mol $SOURCE -o gamin -xf ' + keys_gas_linear + ' -O $TARGET', suffix = '.inp', single_source=True)
 babelGasMolToInp_p1 = Builder(action = 'obabel -i mol $SOURCE -o gamin -xf ' + keys_gas_p1 + ' -O $TARGET', suffix = '.inp', single_source=True)
 babelGasMolToInp_m1 = Builder(action = 'obabel -i mol $SOURCE -o gamin -xf ' + keys_gas_m1 + ' -O $TARGET', suffix = '.inp', single_source=True)
+babelGasMolToInp_m2 = Builder(action = 'obabel -i mol $SOURCE -o gamin -xf ' + keys_gas_m2 + ' -O $TARGET', suffix = '.inp', single_source=True)
 babelGamessToXYZ = Builder(action = 'obabel -i gamout $SOURCE -o xyz -O $TARGET', suffix = '.xyz', single_source=True)
 
 # Gamess also produces a .dat file
@@ -87,6 +92,7 @@ env.Append(BUILDERS = {'BabelGasMolToInp' : babelGasMolToInp})
 env.Append(BUILDERS = {'BabelGasMolToInp_linear' : babelGasMolToInp_linear})
 env.Append(BUILDERS = {'BabelGasMolToInp_p1' : babelGasMolToInp_p1})
 env.Append(BUILDERS = {'BabelGasMolToInp_m1' : babelGasMolToInp_m1})
+env.Append(BUILDERS = {'BabelGasMolToInp_m2' : babelGasMolToInp_m2})
 env.Append(BUILDERS = {'BabelGamessToXYZ' : babelGamessToXYZ})
 env.Append(BUILDERS = {'GamessGas' : gamessGas})
 
@@ -111,6 +117,7 @@ files = []
 files_linear = []
 files_p1 = []
 files_m1 = []
+files_m2 = []
 for fi in molfiles :
 	outfile = os.path.splitext(fi.rstr())[0] + '.xyz'
 	if os.path.exists(outfile) :
@@ -120,6 +127,8 @@ for fi in molfiles :
 		files_p1.append(fi)
 	elif str(fi).endswith("-1.mol") :
 		files_m1.append(fi)
+	elif str(fi).endswith("-2.mol") :
+		files_m2.append(fi)
 	elif str(fi).endswith(".moll") :
 		files_linear.append(fi)
 	elif str(fi).endswith(".mol") :
@@ -130,6 +139,7 @@ inpFiles = env.BabelGasMolToInp(files)
 inpFiles += env.BabelGasMolToInp_linear(files_linear)
 inpFiles += env.BabelGasMolToInp_p1(files_p1)
 inpFiles += env.BabelGasMolToInp_m1(files_m1)
+inpFiles += env.BabelGasMolToInp_m2(files_m2)
 gamoutFiles = env.GamessGas(inpFiles)
 xyzFiles = env.BabelGamessToXYZ(gamoutFiles)
 env.Depends(inpFiles, ['base-keys.gamess'])
