--- a/GAMESS/SConstruct
+++ b/GAMESS/SConstruct
@@ -40,6 +40,8 @@ keys_linear = 'keys-linear.gamess'
 keys_big = 'keys-big.gamess'
 keys_p1 = 'keys_p1.gamess'
 keys_m1 = 'keys_m1.gamess'
+keys_m2 = 'keys_m2.gamess'
+keys_m3 = 'keys_m3.gamess'
 # creating the charge files
 file = open(keys_base,'r')
 baseContents = file.read()
@@ -73,9 +75,16 @@ file.close()
 file = open(keys_m1,'w')
 file.write(baseContents + optimize + internalCoord + '\n $CONTRL ICHARG=-1 $END')
 file.close()
+file = open(keys_m2,'w')
+file.write(baseContents + optimize + '\n $CONTRL ICHARG=-2 $END')
+file.close()
+file = open(keys_m3,'w')
+file.write(baseContents + optimize + '\n $CONTRL ICHARG=-3 $END')
+file.close()
 
 # Gamess stuff
-babelgam = Builder(action = 'obabel -i mol $SOURCE -o gamin -xf ' + keys + ' -O $TARGET; [ ! -f ${SOURCE}.keys ] || cat ${SOURCE}.keys >> $TARGET',
+#babelgam = Builder(action = 'obabel -i mol $SOURCE -o gamin -xf ' + keys + ' -O $TARGET; [ ! -f \'${SOURCE}.keys\' ] || cat \'${SOURCE}.keys\' >> \'$TARGET\'',
+babelgam = Builder(action = 'obabel -i mol $SOURCE -o gamin -xf ' + keys + ' -O $TARGET',
 					 suffix = '.inp', single_source=True)
 babelgam_linear = Builder(action = 'obabel -i mol $SOURCE -o gamin -xf ' + keys_linear + ' -O $TARGET',
 					suffix = '.inp', single_source=True)
@@ -84,6 +93,10 @@ babelgam_big = Builder(action = 'obabel -i mol $SOURCE -o gamin -xf ' + keys_big
 babelgam_p1 = Builder(action = 'obabel -i mol $SOURCE -o gamin -xf ' + keys_p1 + ' -O $TARGET',
 				suffix = '.inp', single_source=True)
 babelgam_m1 = Builder(action = 'obabel -i mol $SOURCE -o gamin -xf ' + keys_m1 + ' -O $TARGET',
+				suffix = '.inp', single_source=True)
+babelgam_m2 = Builder(action = 'obabel -i mol $SOURCE -o gamin -xf ' + keys_m2 + ' -O $TARGET',
+				suffix = '.inp', single_source=True)
+babelgam_m3 = Builder(action = 'obabel -i mol $SOURCE -o gamin -xf ' + keys_m3 + ' -O $TARGET',
 				suffix = '.inp', single_source=True)
 
 # Gamess also produces a .dat file
@@ -97,6 +110,8 @@ env.Append(BUILDERS = {'BabelGam' : babelgam})
 env.Append(BUILDERS = {'BabelGamLinear' : babelgam_linear})
 env.Append(BUILDERS = {'BabelGamBig' : babelgam_big})
 env.Append(BUILDERS = {'BabelGam_m1' : babelgam_m1})
+env.Append(BUILDERS = {'BabelGam_m2' : babelgam_m2})
+env.Append(BUILDERS = {'BabelGam_m3' : babelgam_m3})
 env.Append(BUILDERS = {'BabelGam_p1' : babelgam_p1})
 env.Append(BUILDERS = {'Gamess' : gamess})
 
@@ -165,6 +180,8 @@ files_linear = []
 files_big = []
 files_p1 = []
 files_m1 = []
+files_m2 = []
+files_m3 = []
 for fi in molfiles :
 	goutfile = os.path.splitext(fi.rstr())[0] + '.gout'
 	print(goutfile)
@@ -175,6 +192,10 @@ for fi in molfiles :
 		files_p1.append(fi)
 	elif str(fi).endswith("-1.mol") :
 		files_m1.append(fi)
+	elif str(fi).endswith("-2.mol") :
+		files_m2.append(fi)
+	elif str(fi).endswith("-3.mol") :
+		files_m3.append(fi)
 	elif str(fi).endswith(".moll") :
 		files_linear.append(fi)
 	elif str(fi).endswith(".molb") :
@@ -193,6 +214,8 @@ inps += env.BabelGamLinear(files_linear)
 inps += env.BabelGamBig(files_big)
 inps += env.BabelGam_p1(files_p1)
 inps += env.BabelGam_m1(files_m1)
+inps += env.BabelGam_m2(files_m2)
+inps += env.BabelGam_m3(files_m3)
 	
 env.Depends(inps, ['keys.gamess'])
 # env.Depends(inps, delAction)
